--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,26 @@
     <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
     <img src="./lasagna.jpg" alt="pic of delicious lasagna" width="500">
-</body>
+    <h2>Description</h2>
+        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it! Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below:</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar, spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Allow the lasagna to reset before serving.</li>
+        </ol>
+ </body>
 </html>
