--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Recipe for Lasagna</a>
+        <ul></ul>
+            <li><a href="./recipes/lasagna.html" target="_blank" rel="norefferer">Recipe for Lasagna</a></li>
+            <li><a href="./recipes/pizza.html" target="_blank" rel="norefferer">Recipe for Pepperoni Pizza</a></li>
 </body>
 </html>
