--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,8 +10,9 @@
     <h1>Lasagna</h1>
     <img src="./lasagna.jpg" alt="pic of delicious lasagna" width="500">
     <h2>Description</h2>
-        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it! Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below:</p>
-    <h2>Ingredients</h2>
+        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it! Making lasagna can be time-consuming,</p>
+        <p>but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below:</p>
+    <h3>Ingredients</h3>
         <ul>
             <li>Meat</li>
             <li>Onion and garlic</li>
@@ -21,7 +22,7 @@
             <li>Cheeses</li>
             <li>Egg</li>
         </ul>
-    <h2>Steps</h2>
+    <h3>Steps</h3>
         <ol>
             <li>Make the meat sauce.</li>
             <li>Cook the noodles.</li>
